pom adjusted; need to adjust: del_RepWords and main f