@@ -9,9 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <javafx.version>17</javafx.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <javafx.version>11</javafx.version>
     </properties>
 
     <dependencies>
@@ -24,39 +24,26 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <!-- Maven Compiler Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>17</release>
-                        <compilerArgs>
-                            <arg>--add-modules</arg>
-                            <arg>javafx.controls</arg>
-                        </compilerArgs>
-                </configuration>
-            </plugin>
+    <sourceDirectory>src</sourceDirectory>
 
-            <!-- JavaFX Maven Plugin -->
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>taleHist</mainClass>
-                    <sourceFiles>
-                        <sourceFile>taleHist.java</sourceFile>
-                        <sourceFile>GHist.class</sourceFile>
-                        <sourceFile>fileTxt.class</sourceFile>
-                        <sourceFile>htable.class</sourceFile>
-                        <sourceFile>No.class</sourceFile>
-                    </sourceFiles>
-                </configuration>
-            </plugin>
-        </plugins>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <release>11</release>
+                    </configuration>
+                </plugin>
 
-        <sourceDirectory>.</sourceDirectory>
-    </build>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.8</version>
+                    <configuration>
+                        <mainClass>taleHist</mainClass>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
 </project>
